--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -20,6 +20,6 @@ nav {
 
 
 .activeNav{
-    background-color: var(--bs-primary) !important ;
+    background-color: var(--bs-secondary) !important ;
 
 }
