--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,16 @@
 #Header{
     
     h1{
-        color: var(--bs-info);
+        color: var(--bs-light);
         font-style: italic;
     }
     .hero-landing-1{
-        padding-top: 180px;
+        // padding-top: 180px;
         height: 771px;
+        background-position: bottom;
     }
     .hero-title-big{
-        margin-top: 150px;
+        // margin-top: 150px;
     
     }
 
