--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,9 @@
     h1{
         color: var(--bs-light);
         font-style: italic;
+        background-color: rgba(0, 0, 0, 0.4);
+        padding: 2em;
+        border-radius: 50px 0 50px 0;
     }
     .hero-landing-1{
         // padding-top: 180px;
