--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@
     }
     .hero-landing-1{
         // padding-top: 180px;
-        height: 771px;
+        // height: 500px;
         background-position: bottom;
     }
     .hero-title-big{
