--- a/src/custom.scss
+++ b/src/custom.scss
@@ -34,6 +34,7 @@ $btn-padding-x: 1.3em;
         --bg-primay: #FAFAFA;
         --bs-info: #B9EBE8 !important;
         --bs-light: #F9F9F9 !important;
+        --logoOverlay : rgba(0, 255, 255, 0.4);
          
         body {
                 font-family: Newsreader;
