--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,13 +1,19 @@
-#footerMalargue{
-    background-color: var(--bg-primay) !important;
-    height: 372px;
+#footer22Century{
+    background-color: var(--bs-primary) !important;
     padding-top: 67px;
-    h2{
+    padding-bottom: 100px;
+    color: var(--bs-info) !important;
+    h2{ 
+        font-style: italic;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 40px;
+
         a{
             color: var(--bs-primary);
             text-decoration: none;
             text-align: left;
-            font: normal normal 600 21px/31px Poppins;
+            font: normal normal 600 21px/31px ;
             letter-spacing: 0px;
             opacity: 1;
         }
@@ -17,29 +23,21 @@
         font-size: 14px;
         text-align: left;
         letter-spacing: 0px;
-        color: #222222;
+        color: var(--bs-info);
         opacity: 0.8;
 
     }
-    .btn-outline-primary{
-        height: 52px;
-        width: 52px;
-        border-radius: 50%;
-        padding: 0px;
-        border: 0px;       
-        svg{
-            fill: var(--bs-primary);
-            :hover {
-                fill: white !important;
-                border-radius: 50%;
-            }
+    li{
+        position: relative;
+        display: flex;
+        align-items: center;
 
-        }
+
     }
     #contactMail{
         font-size: 14px;
         text-align: left;
-        font: normal normal medium 14px/21px Poppins;
+        font: normal normal medium 14px/21px ;
         letter-spacing: 0px;
         color: #222222;
         opacity: 0.8;
@@ -50,8 +48,8 @@
 
     }
     .container{
-        border-bottom: 1px solid rgba(112, 112, 112, .2);
-        padding-bottom: 0em
+        padding:0px;
+        margin: 0px;
         
     }
     .mediosDePago{
@@ -60,7 +58,7 @@
     .footerStrong{
         text-align: right !important;
         text-align: left;
-        font: normal normal normal 14px/21px Poppins;
+        font: normal normal normal 14px/21px ;
         letter-spacing: 0px;
         color: #222222;
         opacity: 1;
