--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,10 +2,11 @@
     
     h1{
         color: var(--bs-light);
+        // color: var(--bs-info);
         font-style: italic;
-        background-color: rgba(0, 0, 0, 0.4);
-        padding: 2em;
-        border-radius: 50px 0 50px 0;
+        background-color: rgba(0, 0, 0, 0.2);
+        padding: 1em;
+        // border-radius: 50px 0 50px 0;
     }
     .hero-landing-1{
         // padding-top: 180px;
