--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -12,6 +12,7 @@ nav {
         color: white;
         text-decoration: none;
         margin-left: 2em;
+        text-transform: uppercase;
     }
 
     
