--- a/src/components/FooterButton/FooterButton.scss
+++ b/src/components/FooterButton/FooterButton.scss
@@ -23,6 +23,7 @@
          font-style: normal;
          font-weight: 400;
          font-size: 18px;
+         padding-top: 0px;
         
          span{
             margin-left: 3em;
