explainer styles update

--- a/src/components/Explainer/Explainer.scss
+++ b/src/components/Explainer/Explainer.scss
@@ -7,6 +7,7 @@
         color: var(--bs-info);
         //       T    R    B    L
         padding: 00px 50px 50px 00px;
+        margin: 50px 0 0 ;
     } 
     .img{
         background-size: cover;
