--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,6 @@
 #Header{
+
+    height: 40vh;
     
     h1{
         color: var(--bs-light);
@@ -12,6 +14,7 @@
         // padding-top: 180px;
         // height: 500px;
         background-position: bottom;
+        height: 100%;
     }
     .hero-title-big{
         // margin-top: 150px;
