--- a/src/components/Explainer/Explainer.scss
+++ b/src/components/Explainer/Explainer.scss
@@ -4,13 +4,13 @@
 
 
     .text{
-        color: var(--bs-info);
+        color: var(--bs-light);
         //       T    R    B    L
         padding: 00px 50px 50px 00px;
         margin: 50px 0 0 ;
     } 
     .img{
-        background-size: cover;
-        background-position: center;
+        background-size: cover !important;
+        
     }
 }
