--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,8 +6,8 @@
         color: var(--bs-light);
         // color: var(--bs-info);
         font-style: italic;
-        background-color: rgba(0, 0, 0, 0.2);
-        padding: 1em;
+        // background-color: rgba(0, 0, 0, 0.2);
+        // padding: 1em;
         // border-radius: 50px 0 50px 0;
     }
     .hero-landing-1{
