--- a/src/components/Explainer/Explainer.scss
+++ b/src/components/Explainer/Explainer.scss
@@ -6,8 +6,8 @@
     .text{
         color: var(--bs-light);
         //       T    R    B    L
-        padding: 00px 50px 50px 00px;
-        margin: 50px 0 0 ;
+        padding: 00px 50px 00px 00px;
+        // margin: 50px 0 0 ;
     } 
     .img{
         background-size: cover !important;
