--- a/src/custom.scss
+++ b/src/custom.scss
@@ -62,8 +62,9 @@ h3{
         
 }
 h4{
-        font-family: 'Newsreader';
-        font-weight: 400
+        font-family: 'lato';
+        font-weight: 400;
+        font-size: 18px !important
         
 }
 
