--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -61,6 +61,12 @@
         }
 
     }
+
+    .copyrigth{
+            font-size: x-small !important;
+    
+    }
+
     .contactFooter, .linksFooter{
 
         font-style: normal;
