--- a/src/custom.scss
+++ b/src/custom.scss
@@ -67,6 +67,13 @@ h4{
         font-size: 18px !important
         
 }
+h5{
+        font-family: 'Newsreader';
+        font-weight: 400;
+        font-style: italic;
+        font-size: 28px !important
+        
+}
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
