--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -2,6 +2,8 @@ nav {
     background-color: transparent !important;
     transition: 0.3s all;
 
+    
+
 
    
 
@@ -13,6 +15,7 @@ nav {
         text-decoration: none;
         margin-left: 2em;
         text-transform: uppercase;
+
     }
 
     
@@ -22,5 +25,8 @@ nav {
 
 .activeNav{
     background-color: var(--bs-secondary) !important ;
+    box-shadow: 1px 4px 14px 0px rgba(0,0,0,0.33);
+    -webkit-box-shadow: 1px 4px 14px 0px rgba(0,0,0,0.33);
+    -moz-box-shadow: 1px 4px 14px 0px rgba(0,0,0,0.33);
 
 }
